# file-sorter

./: .gitignore  CHANGELOG.md  README.md  file-sorter.cabal  flake.nix
app/: Main.hs  Options.hs  Parser.hs
