cabal-version:   3.0
name:            file-sorter
version:         0.1.0.0

-- synopsis:
-- description:
license:         MIT
license-file:    LICENSE
author:          sebastianselander
maintainer:      sebastian.selander@gmail.com

-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall -Wextra -Werror -O3

executable file-sorter
  import:           warnings
  main-is:          Main.hs
  other-modules:
    Options
    Parser

  -- other-extensions:
  build-depends:
    , base                  >=4.17
    , containers
    , directory
    , filepath
    , fsnotify
    , optparse-applicative

  hs-source-dirs:   app
  default-language: GHC2021
